--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt": "^0.4.5",
     "load-grunt-config": "0.10.0",
     "time-grunt": "*",
-    "grunt-balmung": "^0.3.0"
+    "grunt-balmung": "^0.3.0",
+    "grunt-bower-task": "*"
   }
 }
