--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "load-grunt-config": "0.10.0",
-    "time-grunt": "*",
     "grunt-balmung": "^0.3.0",
     "grunt-bower-task": "*",
     "grunt-contrib-copy": "*",
     "grunt-contrib-htmlmin": "*",
-    "grunt-contrib-uglify": "*"
+    "grunt-contrib-stylus": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-inline": "^0.3.2",
+    "grunt-spritesmith": "1.18.0",
+    "load-grunt-config": "0.10.0",
+    "time-grunt": "*"
   }
 }
