--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
     "grunt-balmung": "^0.3.0",
     "grunt-bower-task": "*",
     "grunt-contrib-copy": "*",
+    "grunt-contrib-clean": "*",
+    "grunt-contrib-connect": "*",
     "grunt-contrib-htmlmin": "*",
     "grunt-contrib-stylus": "*",
     "grunt-contrib-uglify": "*",
     "grunt-contrib-concat": "*",
+    "grunt-contrib-watch": "*",
     "grunt-csso": "*",
     "grunt-csscomb": "*",
+    "grunt-open": "*",
     "grunt-usemin": "*",
     "grunt-inline": "^0.3.2",
     "grunt-spritesmith": "1.18.0",
+    "grunt-size-report": "*",
     "load-grunt-config": "0.10.0",
     "time-grunt": "*"
   }
